--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ OPENAI_API_BASE_URL=api.openai.com
 API_KEY_STRATEGY=random
 LOCAL_PROXY=
 DISABLE_LOCAL_PROXY=
-DISCORD_SERVER_ID=
-DISCORD_CHANNEL_ID=
-DISCORD_TOKEN=
+DISCORD_SERVER_ID=1155569860126978068
+DISCORD_CHANNEL_ID=1155569860881961063
+DISCORD_TOKEN=MTE1NTU2OTQ3MDA3NzY2OTQ5Nw.G1u-Rd.T270vIXnGGWz_91fARHhYsTwT2qIy0u4vc3imA
