--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ LOCAL_PROXY=
 DISABLE_LOCAL_PROXY=
 DISCORD_SERVER_ID=1155569860126978068
 DISCORD_CHANNEL_ID=1155569860881961063
-DISCORD_TOKEN=MTE1NTU2OTQ3MDA3NzY2OTQ5Nw.G1u-Rd.T270vIXnGGWz_91fARHhYsTwT2qIy0u4vc3imA
+DISCORD_TOKEN=MTE1NTU2OTQ3MDA3NzY2OTQ5Nw.GXlWqK.lR_ZYV-6U1AOL0bm4HySrSRjSKBaC2lX-QtshQ
